# OS-MO-ATHENA

./: README.md  build.txt
sys/: CMakeLists.txt  link.ld  multiboot.ld
sys/boot/: boot.asm  simple_boot.asm
sys/kernel/: header.c
sys/kernel/include/: color.h  commands.h  keyboard.h  ports.h  shell.h  types.h  video.h
sys/kernel/src/: color.cpp  commands.cpp  keyboard.cpp  main.cpp  ports.cpp  shell.cpp  video.cpp
